--- a/Reporting/TestSummary_DataService_CRUD.xaml
+++ b/Reporting/TestSummary_DataService_CRUD.xaml
@@ -8,7 +8,7 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1103.2,5585.6</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1103.2,5648</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>TestSummary_DataService_CRUD_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -133,7 +133,7 @@
       <x:Boolean x:Key="ShouldCollapseAll">False</x:Boolean>
     </scg:Dictionary>
   </sap:WorkflowViewStateService.ViewState>
-  <Sequence DisplayName="TestSummary_DataService_CRUD" sap:VirtualizedContainerService.HintSize="983.2,5372" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="TestSummary_DataService_CRUD" sap:VirtualizedContainerService.HintSize="928,5583.2" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="dt_TransposedSummaryReport" />
       <Variable x:TypeArguments="t:TRAutomationMaster" sap2010:Annotation.AnnotationText="Type 't:TRAutomationMaster' ('clr-namespace:TR_Aut_Workflow_Performer_DD_2023;assembly=DataService.TR_Aut_Workflow_Performer_DD_2023') could not be resolved and was automatically replaced with 'UnknownType'&#xA;Type 't:TRAutomationMaster' ('clr-namespace:TR_Aut_Dispatcher_2024;assembly=DataService.TR_Aut_Dispatcher_2024') could not be resolved and was automatically replaced with 'UnknownType'" Name="ReportRecord" />
@@ -144,19 +144,19 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <TryCatch DisplayName="Data Service CRUD Ops" sap:VirtualizedContainerService.HintSize="750.4,5348.8" sap2010:WorkflowViewState.IdRef="TryCatch_1">
+    <TryCatch DisplayName="Data Service CRUD Ops" sap:VirtualizedContainerService.HintSize="865.6,5494.4" sap2010:WorkflowViewState.IdRef="TryCatch_1">
       <TryCatch.Try>
-        <Sequence sap:VirtualizedContainerService.HintSize="713.6,4800" sap2010:WorkflowViewState.IdRef="Sequence_10">
+        <Sequence sap:VirtualizedContainerService.HintSize="828.8,4945.6" sap2010:WorkflowViewState.IdRef="Sequence_10">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">False</x:Boolean>
               <x:Boolean x:Key="IsPinned">False</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <ui:KillProcess AppliesTo="{x:Null}" ContinueOnError="{x:Null}" Process="{x:Null}" DisplayName="Kill Process" sap:VirtualizedContainerService.HintSize="680,166.4" sap2010:WorkflowViewState.IdRef="KillProcess_1" ProcessName="excel" />
-          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="680,174.4" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Data Service CRUD Operations started&quot;]" />
-          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="680,174.4" sap2010:WorkflowViewState.IdRef="LogMessage_3" Level="Info" Message="[&quot;**************************************************************************************&quot;]" />
-          <Assign DisplayName="Init Automation Master entity" sap:VirtualizedContainerService.HintSize="680,113.6" sap2010:WorkflowViewState.IdRef="Assign_1">
+          <ui:KillProcess AppliesTo="{x:Null}" ContinueOnError="{x:Null}" Process="{x:Null}" DisplayName="Kill Process" sap:VirtualizedContainerService.HintSize="766.4,166.4" sap2010:WorkflowViewState.IdRef="KillProcess_1" ProcessName="excel" />
+          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="766.4,174.4" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Data Service CRUD Operations started&quot;]" />
+          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="766.4,174.4" sap2010:WorkflowViewState.IdRef="LogMessage_3" Level="Info" Message="[&quot;**************************************************************************************&quot;]" />
+          <Assign DisplayName="Init Automation Master entity" sap:VirtualizedContainerService.HintSize="766.4,113.6" sap2010:WorkflowViewState.IdRef="Assign_1">
             <Assign.To>
               <OutArgument x:TypeArguments="t:TRAutomationMaster">[AutomationMasterRecord]</OutArgument>
             </Assign.To>
@@ -170,25 +170,25 @@
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
           </Assign>
-          <ueab:ExcelProcessScopeX DisplayAlerts="{x:Null}" ExistingProcessAction="{x:Null}" FileConflictResolution="{x:Null}" LaunchMethod="{x:Null}" LaunchTimeout="{x:Null}" MacroSettings="{x:Null}" ProcessMode="{x:Null}" DisplayName="Data injection TestSummary Record to Data Service layer" sap:VirtualizedContainerService.HintSize="680,4111.2" sap2010:WorkflowViewState.IdRef="ExcelProcessScopeX_2" ShowExcelWindow="False">
+          <ueab:ExcelProcessScopeX DisplayAlerts="{x:Null}" ExistingProcessAction="{x:Null}" FileConflictResolution="{x:Null}" LaunchMethod="{x:Null}" LaunchTimeout="{x:Null}" MacroSettings="{x:Null}" ProcessMode="{x:Null}" DisplayName="Data injection TestSummary Record to Data Service layer" sap:VirtualizedContainerService.HintSize="766.4,4228" sap2010:WorkflowViewState.IdRef="ExcelProcessScopeX_2" ShowExcelWindow="False">
             <ueab:ExcelProcessScopeX.Body>
               <ActivityAction x:TypeArguments="ui:IExcelProcess">
                 <ActivityAction.Argument>
                   <DelegateInArgument x:TypeArguments="ui:IExcelProcess" Name="ExcelProcessScopeTag" />
                 </ActivityAction.Argument>
-                <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="646.4,4001.6" sap2010:WorkflowViewState.IdRef="Sequence_8">
+                <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="732.8,4118.4" sap2010:WorkflowViewState.IdRef="Sequence_8">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" DisplayName="Test Summary Report" sap:VirtualizedContainerService.HintSize="612.8,3941.6" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_2" ResizeWindow="None" SensitivityOperation="None" WorkbookPath="[in_TestReportExcel]">
+                  <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" DisplayName="Test Summary Report" sap:VirtualizedContainerService.HintSize="670.4,4029.6" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_2" ResizeWindow="None" SensitivityOperation="None" WorkbookPath="[in_TestReportExcel]">
                     <ueab:ExcelApplicationCard.Body>
                       <ActivityAction x:TypeArguments="ue:IWorkbookQuickHandle">
                         <ActivityAction.Argument>
                           <DelegateInArgument x:TypeArguments="ue:IWorkbookQuickHandle" Name="Excel" />
                         </ActivityAction.Argument>
-                        <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="579.2,3648.8" sap2010:WorkflowViewState.IdRef="Sequence_7">
+                        <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="636.8,3736.8" sap2010:WorkflowViewState.IdRef="Sequence_7">
                           <Sequence.Variables>
                             <Variable x:TypeArguments="x:String" Name="str_StartTimeDispatcher" />
                             <Variable x:TypeArguments="x:String" Name="str_EndTimeDispatcher" />
@@ -200,41 +200,41 @@
                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <ueab:CopyPasteRangeX DestinationRange="[excel.Sheet(in_Config(&quot;TestSummary_TransposedWorksheet&quot;).ToString).Range(in_Config(&quot;TestSummary_TransposeRange&quot;).ToString)]" DisplayName="Transpose Summary Report" sap:VirtualizedContainerService.HintSize="545.6,273.6" sap2010:WorkflowViewState.IdRef="CopyPasteRangeX_1" PasteOptions="Values" SourceRange="[excel.Sheet(in_Config(&quot;TestSummary_SummaryWorksheet&quot;).ToString).Range(in_Config(&quot;TestSummary_SummaryRange&quot;).ToString)]" Transpose="True" />
-                          <ueab:ReadCellValueX Cell="[excel.Sheet(in_Config(&quot;TestSummary_SummaryWorksheet&quot;).ToString).Cell(in_Config(&quot;TestSummary_StartTimeDIndex&quot;).ToString)]" DisplayName="Start Time Dispatcher w source format" GetFormattedText="True" sap:VirtualizedContainerService.HintSize="545.6,192" sap2010:WorkflowViewState.IdRef="ReadCellValueX_1">
+                          <ueab:CopyPasteRangeX DestinationRange="[excel.Sheet(in_Config(&quot;TestSummary_TransposedWorksheet&quot;).ToString).Range(in_Config(&quot;TestSummary_TransposeRange&quot;).ToString)]" DisplayName="Transpose Summary Report" sap:VirtualizedContainerService.HintSize="574.4,273.6" sap2010:WorkflowViewState.IdRef="CopyPasteRangeX_1" PasteOptions="Values" SourceRange="[excel.Sheet(in_Config(&quot;TestSummary_SummaryWorksheet&quot;).ToString).Range(in_Config(&quot;TestSummary_SummaryRange&quot;).ToString)]" Transpose="True" />
+                          <ueab:ReadCellValueX Cell="[excel.Sheet(in_Config(&quot;TestSummary_SummaryWorksheet&quot;).ToString).Cell(in_Config(&quot;TestSummary_StartTimeDIndex&quot;).ToString)]" DisplayName="Start Time Dispatcher w source format" GetFormattedText="True" sap:VirtualizedContainerService.HintSize="574.4,192" sap2010:WorkflowViewState.IdRef="ReadCellValueX_1">
                             <ueab:ReadCellValueX.SaveTo>
                               <OutArgument x:TypeArguments="x:String">[str_StartTimeDispatcher]</OutArgument>
                             </ueab:ReadCellValueX.SaveTo>
                           </ueab:ReadCellValueX>
-                          <ueab:ReadCellValueX Cell="[excel.Sheet(in_Config(&quot;TestSummary_SummaryWorksheet&quot;).ToString).Cell(in_Config(&quot;TestSummary_EndTimeDIndex&quot;).ToString)]" DisplayName="End Time Dispatcher w source format" GetFormattedText="True" sap:VirtualizedContainerService.HintSize="545.6,192" sap2010:WorkflowViewState.IdRef="ReadCellValueX_2">
+                          <ueab:ReadCellValueX Cell="[excel.Sheet(in_Config(&quot;TestSummary_SummaryWorksheet&quot;).ToString).Cell(in_Config(&quot;TestSummary_EndTimeDIndex&quot;).ToString)]" DisplayName="End Time Dispatcher w source format" GetFormattedText="True" sap:VirtualizedContainerService.HintSize="574.4,192" sap2010:WorkflowViewState.IdRef="ReadCellValueX_2">
                             <ueab:ReadCellValueX.SaveTo>
                               <OutArgument x:TypeArguments="x:String">[str_EndTimeDispatcher]</OutArgument>
                             </ueab:ReadCellValueX.SaveTo>
                           </ueab:ReadCellValueX>
-                          <ueab:ReadCellValueX Cell="[excel.Sheet(in_Config(&quot;TestSummary_SummaryWorksheet&quot;).ToString).Cell(in_Config(&quot;TestSummary_StartTimePIndex&quot;).ToString)]" DisplayName="Start Time Performer w source format" GetFormattedText="True" sap:VirtualizedContainerService.HintSize="545.6,192" sap2010:WorkflowViewState.IdRef="ReadCellValueX_3">
+                          <ueab:ReadCellValueX Cell="[excel.Sheet(in_Config(&quot;TestSummary_SummaryWorksheet&quot;).ToString).Cell(in_Config(&quot;TestSummary_StartTimePIndex&quot;).ToString)]" DisplayName="Start Time Performer w source format" GetFormattedText="True" sap:VirtualizedContainerService.HintSize="574.4,192" sap2010:WorkflowViewState.IdRef="ReadCellValueX_3">
                             <ueab:ReadCellValueX.SaveTo>
                               <OutArgument x:TypeArguments="x:String">[str_StartTimePerformer]</OutArgument>
                             </ueab:ReadCellValueX.SaveTo>
                           </ueab:ReadCellValueX>
-                          <ueab:ReadCellValueX Cell="[excel.Sheet(in_Config(&quot;TestSummary_SummaryWorksheet&quot;).ToString).Cell(in_Config(&quot;TestSummary_EndTimePIndex&quot;).ToString)]" DisplayName="End Time Performer w source format" GetFormattedText="True" sap:VirtualizedContainerService.HintSize="545.6,192" sap2010:WorkflowViewState.IdRef="ReadCellValueX_4">
+                          <ueab:ReadCellValueX Cell="[excel.Sheet(in_Config(&quot;TestSummary_SummaryWorksheet&quot;).ToString).Cell(in_Config(&quot;TestSummary_EndTimePIndex&quot;).ToString)]" DisplayName="End Time Performer w source format" GetFormattedText="True" sap:VirtualizedContainerService.HintSize="574.4,192" sap2010:WorkflowViewState.IdRef="ReadCellValueX_4">
                             <ueab:ReadCellValueX.SaveTo>
                               <OutArgument x:TypeArguments="x:String">[str_EndTimePerformer]</OutArgument>
                             </ueab:ReadCellValueX.SaveTo>
                           </ueab:ReadCellValueX>
-                          <ueab:ReadRangeX DisplayName="Read Transposed Summary Range" sap:VirtualizedContainerService.HintSize="545.6,201.6" sap2010:WorkflowViewState.IdRef="ReadRangeX_1" Range="[excel.Sheet(&quot;Transposed Data&quot;).Range(in_Config(&quot;TestSummary_TransposeRange&quot;).ToString)]" SaveTo="[dt_TransposedSummaryReport]" />
-                          <ui:ForEachRow ColumnNames="{x:Null}" CurrentIndex="{x:Null}" DataTable="[dt_TransposedSummaryReport]" DisplayName="Binder Specific entry - Create Master Entity in Data Service" sap:VirtualizedContainerService.HintSize="545.6,2232" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
+                          <ueab:ReadRangeX DisplayName="Read Transposed Summary Range" sap:VirtualizedContainerService.HintSize="574.4,201.6" sap2010:WorkflowViewState.IdRef="ReadRangeX_1" Range="[excel.Sheet(&quot;Transposed Data&quot;).Range(in_Config(&quot;TestSummary_TransposeRange&quot;).ToString)]" SaveTo="[dt_TransposedSummaryReport]" />
+                          <ui:ForEachRow ColumnNames="{x:Null}" CurrentIndex="{x:Null}" DataTable="[dt_TransposedSummaryReport]" DisplayName="Binder Specific entry - Create Master Entity in Data Service" sap:VirtualizedContainerService.HintSize="574.4,2291.2" sap2010:WorkflowViewState.IdRef="ForEachRow_1">
                             <ui:ForEachRow.Body>
                               <ActivityAction x:TypeArguments="sd:DataRow">
                                 <ActivityAction.Argument>
                                   <DelegateInArgument x:TypeArguments="sd:DataRow" Name="Row" />
                                 </ActivityAction.Argument>
-                                <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="512,2034.4" sap2010:WorkflowViewState.IdRef="Sequence_9">
+                                <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="540.8,2093.6" sap2010:WorkflowViewState.IdRef="Sequence_9">
                                   <sap:WorkflowViewStateService.ViewState>
                                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                     </scg:Dictionary>
                                   </sap:WorkflowViewStateService.ViewState>
-                                  <ui:MultipleAssign DisplayName="Test Summary Automation Master Records" sap:VirtualizedContainerService.HintSize="478.4,1460" sap2010:WorkflowViewState.IdRef="MultipleAssign_1">
+                                  <ui:MultipleAssign DisplayName="Test Summary Automation Master Records" sap:VirtualizedContainerService.HintSize="478.4,1490.4" sap2010:WorkflowViewState.IdRef="MultipleAssign_1">
                                     <ui:MultipleAssign.AssignOperations>
                                       <scg:List x:TypeArguments="ui:AssignOperation" Capacity="64">
                                         <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_2">
@@ -579,6 +579,14 @@
                                           </ui:AssignOperation.To>
                                           <ui:AssignOperation.Value>
                                             <InArgument x:TypeArguments="x:String">[Row.Item("Status AddDocument-GFR").ToString]</InArgument>
+                                          </ui:AssignOperation.Value>
+                                        </ui:AssignOperation>
+                                        <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_49">
+                                          <ui:AssignOperation.To>
+                                            <OutArgument x:TypeArguments="x:String">[AutomationMasterRecord.StatusSubmissionWizard]</OutArgument>
+                                          </ui:AssignOperation.To>
+                                          <ui:AssignOperation.Value>
+                                            <InArgument x:TypeArguments="x:String">[Row.Item("Binder Creation_GFR").ToString]</InArgument>
                                           </ui:AssignOperation.Value>
                                         </ui:AssignOperation>
                                       </scg:List>
